--- a/tetris.css
+++ b/tetris.css
@@ -33,7 +33,7 @@
     justify-content: space-around;
     align-items: center;
     grid-area: inf;
-    background: red;
+    background: white;
     border: 5px solid black;
 }
 .info div{
@@ -50,3 +50,21 @@
     width: 150px;
     height: 150px;
 }
+
+.game_label {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(14, 1fr);
+    gap: 1px;
+    background-color: #333;
+    width: 100%;
+    height: 760px;
+  }
+  .cell {
+    width: 50px;
+    height: 50px;
+    background-color: lightgrey;
+  }
+  .active {
+    background-color: red;
+  }
