--- a/tetris.css
+++ b/tetris.css
@@ -13,7 +13,9 @@
     "gl gl gl gl inf inf"
     "gl gl gl gl inf inf";
     gap: 20px;
+    margin-left: 30vh;
 }
+
 .title{
     display: flex;
     justify-content: center;
@@ -22,11 +24,14 @@
     border: 5px solid black;
     font-size: 36px;
     font-weight: bold;
+    text-transform: uppercase;
 }
+
 .game_label{
     grid-area: gl;
     border: 5px solid black;
 }
+
 .info{
     display: flex;
     flex-flow: column wrap;
@@ -36,6 +41,7 @@
     background: white;
     border: 5px solid black;
 }
+
 .info div{
     display: flex;
     border: 5px solid black;
@@ -52,19 +58,22 @@
 }
 
 .game_label {
+    margin-left: 13%;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(14, 1fr);
     gap: 1px;
     background-color: #333;
-    width: 100%;
-    height: 760px;
+    width: 71%;
+    height: 790px;
   }
+  
   .cell {
-    width: 50px;
-    height: 50px;
+    width: 55px;
+    height: 55px;
     background-color: lightgrey;
   }
+
   .active {
     background-color: red;
   }
