--- a/tetris.css
+++ b/tetris.css
@@ -1,42 +1,81 @@
-.game_container{
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    overflow: hidden;
+    background-color: black;
+    position: relative;
+  }
+  
+  .game_container {
     display: grid;
     width: 1200px;
     height: 900px;
-    grid-template-columns: repeat(6,1fr);
-    grid-template-rows: repeat(7,1fr);
-    grid-template-areas: 
-    "tl tl tl tl inf inf"
-    "gl gl gl gl inf inf"
-    "gl gl gl gl inf inf"
-    "gl gl gl gl inf inf"
-    "gl gl gl gl inf inf"
-    "gl gl gl gl inf inf"
-    "gl gl gl gl inf inf";
-    gap: 20px;
-}
-.title{
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    grid-template-areas:
+      "tl tl tl tl . ."
+      "gl gl gl gl inf inf"
+      "gl gl gl gl inf inf"
+      "gl gl gl gl inf inf"
+      "gl gl gl gl inf inf"
+      "gl gl gl gl inf inf"
+      "gl gl gl gl inf inf";
+  
+    margin-left: 30vh;
+  }
+  
+  .title {
     display: flex;
     justify-content: center;
     align-items: center;
     grid-area: tl;
-    border: 5px solid black;
+    
     font-size: 36px;
     font-weight: bold;
-}
-.game_label{
+    text-transform: uppercase;
+    color: white;
+  }
+  
+  .game_label {
     grid-area: gl;
-    border: 5px solid black;
-}
-.info{
+    border: 5px solid rgba(#4682B4);
+    gap: 1px; 
+    box-shadow: 0 4px 10px 0 #008080, 0 4px 100px 0 #4682B4;
+    background-color: #4682B4;
+  
+    margin-left: 13%;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(14, 1fr);
+    background-color: #008080;
+    width: 71%;
+    height: 790px;
+    z-index: 1;
+  }
+  
+  .info {
     display: flex;
     flex-flow: column wrap;
     justify-content: space-around;
     align-items: center;
     grid-area: inf;
-    background: white;
+    background: rgba(0, 0, 0, 0.5);
     border: 5px solid black;
-}
-.info div{
+    z-index: 1;
+  
+    color: white;
+    box-shadow: 0 4px 10px 0 #008080, 0 4px 80px 0 #4682B4;
+    border-radius: 20px;
+  }
+  
+  .score_label, .next_label, .time_label {
+    margin-top: -50px;
+    
+  }
+  
+  .info div {
     display: flex;
     border: 5px solid black;
     font-size: 28px;
@@ -44,27 +83,48 @@
     height: 75px;
     justify-content: center;
     align-items: center;
-}
-
-.info .next_label{
+  }
+  
+  .info .next_label {
     width: 150px;
     height: 150px;
-}
-
-.game_label {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(14, 1fr);
-    gap: 1px;
-    background-color: #333;
-    width: 100%;
-    height: 760px;
+    border: 1px solid white;
   }
+  
+  
+  
   .cell {
-    width: 50px;
-    height: 50px;
+    width: 55px;
+    height: 55px;
     background-color: lightgrey;
   }
+  
   .active {
     background-color: red;
   }
+  
+  .locked {
+    background-color: red;
+  }
+  
+  
+  
+  /*background*/
+  
+  .points-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* Evita che interferisca con il resto della pagina */
+  }
+  
+  .point {
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    background-color: aquamarine; /* Puoi cambiare colore qui */
+    border-radius: 50%;
+  }
+  
